--- a/stylesheet.css
+++ b/stylesheet.css
@@ -220,13 +220,11 @@ h5 {
     font-size: 1.3rem;
     font-weight: bold;
 }
-
-.form-style {
-    text-align: center;
-    line-height: 1.7rem;
+.custom-select {
+    margin-bottom: 1rem;
 }
-.form-style div {
-    padding-top: 1.5rem;
+#enviar {
+    margin-top: 1rem;
 }
 /*--------------------------------------------*/
 /*-------------------NOSOTROS------------------*/
@@ -313,10 +311,13 @@ h5 {
         height: 1.4rem;
     }
     .menu-icon {
-        width: 0.9rem;
+        width: 1.3rem;
     }
     .navbar {
-        padding: 0.08rem 0.4rem;
+        padding: 0.5rem;
+    }
+    .navbar-light .navbar-nav .nav-link {
+        font-size: 0.9rem;
     }
     /*------------------------------------------*/  
     
@@ -337,23 +338,23 @@ h5 {
         padding-top: 3rem;
     }   
     .footer-bottom-index {
-        font-size: 0.4rem;
+        font-size: 0.3rem;
     }
 
     /*-------------------------------------------*/ 
     /*--------------------INDEX------------------*/
     .title {
-        font-size: 1.4rem;
+        font-size: 1.1rem;
     }
-    .top-section {
-        padding-bottom: 8%;  
-        padding-top: 4rem;
+    .top-section {  
+        padding-top: 5rem;
     }
     #call {
         text-align: center; 
     }
     #p-number {
         font-size: 0.5rem;
+        padding-top: 1rem;
     }
     #number {
         font-size: 0.7rem;
@@ -400,7 +401,7 @@ h5 {
     /*------------*/
     /*------------------SERVICIOS---------------*/
     .intro-servicios {
-        padding-top: 4rem;
+        padding-top: 5rem;
     }
     .intro-servicios h3 {
         font-size: 1rem;
@@ -424,22 +425,28 @@ h5 {
     /*----------------------------------------*/
     /*------------------CONTACTO------------------*/
     #intro-forms {
-        padding-top: 4rem;
+        padding-top: 5rem;
     }
     #intro-forms h3 {
         font-size: 1rem;
         padding-bottom: 1rem;
     }
     .form-style {
-        line-height: 1.5rem;
+        font-size: 0.9rem;
     }
-    .form-style div {
-        padding-top: 1rem;
+    .form-control {
+        font-size: 0.9rem;
+    }
+    .custom-select {
+        font-size: 0.9rem;
+    }
+    option {
+        font-size: 0.8rem;
     }
     /*--------------------------------------------*/
     /*----------NOSOTROS-----------------*/
     .intro-nosotros {
-        padding-top: 4rem;
+        padding-top: 5rem;
     }
     .intro-nosotros h3 {
         font-size: 1rem;
@@ -464,7 +471,7 @@ h5 {
     /*--------------------------------------------*/
     /*-------------------GARANTIA-----------------*/
     .intro-garantia {
-        padding-top: 4rem; 
+        padding-top: 5rem; 
     }
     .intro-garantia h3 {
         font-size: 1rem;
