--- a/stylesheet.css
+++ b/stylesheet.css
@@ -165,6 +165,9 @@ h5 {
 #frigo {
     height: 6.5rem;
 }
+#nevera {
+    height: 6.5rem;
+}
 /*------------*/
 .footer-top-index {
     font-size: 0.8rem;
