--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -29,7 +29,7 @@ h4 {
 
 /*--------------------NAV-------------------*/
 .navbar {
-    box-shadow: 5px 0 10px;  
+    box-shadow: 5px 0 10px black;  
 }
 .blue {
     background-color: $color-empresa!important;
@@ -74,7 +74,7 @@ h4 {
 .body-index {
     background-image: url(../images/Electro/modern-kitchen-1772638_1920.jpg) ;
     background-attachment: fixed;
-    border-image-repeat: none;
+    color: rgb(231, 231, 231);
 }
 .top-section {
     background-color: #3636369a;
@@ -123,6 +123,7 @@ h4 {
     box-sizing: border-box;
     padding-bottom: 2rem;
     padding-top: 2rem;
+    color: #000000;
 }
 #img-electro {
     width: 100%;
@@ -190,11 +191,25 @@ h4 {
 #final-index-mb {
    display: none;
 }
+.row {
+    width:100%;
+    margin-left: 0%;
+}
+.fan-coil {
+    padding-top: 2rem;
+}
+.mapa {
+    padding-top: 6rem;
+    border-radius: 20%;
+}
+.mapa-borde {
+    border-radius: 20%;
+}
      /*-------Footer Index------*/
 .footer-top-index {
     font-size: 0.8rem;
     text-align: center;
-    padding-top: 5.2%;
+    padding-top: 7%;
     padding-bottom: 1rem;
     color: #cacaca;
     
@@ -243,7 +258,6 @@ h4 {
 
     & h3 {
         font-size: 1.3rem;
-        font-weight: bold;
     }
 }
 .form-style {
@@ -260,6 +274,32 @@ h4 {
         background-color: rgb(83, 83, 83); 
         border-color: rgb(83, 83, 83);
     }
+}
+.margin-top {
+    margin-top: 2rem;
+}
+.contacto {
+    background-color: #3636369a;
+    width: 100%;
+    padding-bottom: 2rem;
+}
+.form-control {
+    background-color: rgba(235, 235, 235, 0.989);
+}
+.custom-select {
+    background: rgb(235, 235, 235);
+}
+.formulario {
+    font-weight: 400;
+}
+/*------footer-----*/
+.footer-top-contacto {
+    font-size: 0.8rem;
+    text-align: center;
+    padding-top: 5.2%;
+    padding-bottom: 1rem;
+    color: #cacaca;
+    background-color:#3636369a;
 }
 /*-----------------NOSOTROS-----------------*/
 .intro-nosotros {
@@ -331,7 +371,7 @@ h4 {
 /*--------------------FOOTER------------------*/
 .footer-top {
     font-size: 0.8rem;
-    margin-top: 7.2%;
+    padding-top: 7.2%;
     padding-bottom: 1rem;
     color: #000000;
     width: 100%;
@@ -339,7 +379,7 @@ h4 {
 .footer-bottom {
     color: rgb(112, 112, 112);
     font-size: 0.5rem;
-    margin-top: 2%;
+    padding-top: 2%;
     padding-top: 1rem;
     padding-bottom: 1rem;
     background-color: #cdcdcd;
@@ -473,9 +513,12 @@ $padding-top-page-579: 4rem;
     }
     .carousel-indicators li {
         width: 15px;
-        height: 1px;
+        height: 0.7px;
     }
-   
+    .mapa {
+        padding-bottom: 2rem;
+        padding-top: 0;
+    }
     /*------------------(SERVICIOS)---------------*/
     .intro-servicios {
         padding-top: $padding-top-page-579;
@@ -517,9 +560,15 @@ $padding-top-page-579: 4rem;
             padding-top: 1rem;
         }
     }
-    #index-slide {
-        visibility: visible;
+    .formulario {
+        padding-top: 1rem;
+        padding-bottom: 2rem;
     }
+    .footer-top-contacto {
+        font-size: 0.6rem;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    } 
     /*-----------------(NOSOTROS)-----------------*/
     .intro-nosotros {
         padding-top: $padding-top-page-579;
