--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,6 +1,8 @@
 $font-paragraph: 1rem;
 $padding-top-page: 7rem;
 $color-empresa: #253759;
+$background-white: #e6e6e6ad;
+$background-black:  #3636369a;
 
 * {
     padding: 0px;
@@ -14,6 +16,10 @@ html,body {
 body {
     background-color: #dddddd;
     font-family: 'Poppins', sans-serif;
+}
+p {
+    margin-top: 0;
+    margin-bottom: 0; 
 }
 .p {
     font-size: $font-paragraph;
@@ -32,12 +38,12 @@ h4 {
     color: rgb(231, 231, 231);
 }
 .background-negro {
-    background-color: #151515ad;
+    background-color: $background-black;
     width: 100%;
     color: rgb(231, 231, 231);
 }
 .background-blanco {
-    background-color: #e6e6e6ad;
+    background-color: $background-white;
     width: 100%;
     color: rgb(0, 0, 0);
 }
@@ -61,7 +67,11 @@ h4 {
         .active {
             .nav-link {
                 color:rgb(255, 255, 255);
-                border-bottom: 1px solid;
+                border-bottom: 3px solid rgb(255, 255, 255);
+                padding-left: 0%;
+                padding-right: 0%;
+                margin-right: 0.5rem;
+                margin-left: 0.5rem;
                 &:hover {
                     font-size: 1rem;
                     color: rgb(255, 255, 255);
@@ -83,15 +93,10 @@ h4 {
     align-items: center;
     height: 2.5rem;
 }
-
 /*-------------------INDEX-------------------*/
-.body-index {
-    color: rgb(231, 231, 231);
-}
 .top-section {
-    background-color: #3636369a;
     color: rgb(255, 255, 255); 
-    padding-bottom: 8%;  
+    padding-bottom: 4rem;  
     width: 100%;
     padding-top: $padding-top-page + 4;
 }
@@ -106,7 +111,8 @@ h4 {
     align-content: center;
 }
 #p-number {
-    padding-top: 3rem;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
     font-size: 1.4rem;
     color: rgb(234, 234, 234);;
 }
@@ -148,7 +154,6 @@ h4 {
 
            /*-----Boxes-----*/
 #final-index {
-    background-color: #3636369a;
     width: 100%;
     padding-top: 6rem;
 }
@@ -215,29 +220,11 @@ h4 {
 }
 .mapa {
     padding-top: 6rem;
-    border-radius: 20%;
 }
-.mapa-borde {
-    border-radius: 20%;
+.map {
+    border-radius: 1rem;
+    box-shadow: 5px 0 10px rgba(60, 60, 60, 0.922);
 }
-     /*-------Footer Index------*/
-.footer-top-index {
-    font-size: 0.8rem;
-    text-align: center;
-    padding-top: 7%;
-    padding-bottom: 1rem;
-    color: #cacaca;
-    
-}   
-.footer-bottom-index {
-    color: rgb(167, 167, 167);
-    font-size: 0.5rem;
-    text-align: center;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    background-color: #141414bd;
-}
-
 /*------------------SERVICIOS---------------*/
 .intro-servicios {
     padding-top: $padding-top-page;
@@ -252,7 +239,7 @@ h4 {
 }
 .box-unit-s {
     margin: 1rem;
-    background-color:#c7c7c7b9;
+    background-color:#ddddddd1;
     color: rgb(0, 0, 0);
     padding: 1rem;
     border-radius: 1rem;
@@ -296,24 +283,15 @@ h4 {
     padding-bottom: 2rem;
 }
 .form-control {
-    background-color: rgba(255, 255, 255, 0.386);
-    color: #a2a2a2;
+    background-color: rgba(255, 255, 255, 0.685);
+    color: #000000;
 }
 .custom-select {
-    background: rgba(255, 255, 255, 0.386);
-    color: #000000;
+    background: rgba(255, 255, 255, 0.685);
+    color: #6a6a6a;
 }
 .formulario {
     font-weight: 400;
-}
-/*------footer-----*/
-.footer-top-contacto {
-    font-size: 0.8rem;
-    text-align: center;
-    padding-top: 5.2%;
-    padding-bottom: 1rem;
-    color: #cacaca;
-    background-color: #151515ad;
 }
 /*-----------------NOSOTROS-----------------*/
 .intro-nosotros {
@@ -336,7 +314,7 @@ h4 {
     border-radius: 20px;
 }
 .box-unit-n {
-    @include box-unit-n-example (#c7c7c7b9, #000000);
+    @include box-unit-n-example (#ddddddd1, #000000);
     & p {
         color:#242424;
     }
@@ -347,7 +325,7 @@ h4 {
 } 
 .box-unit-n-b {
     @extend .box-unit-n;
-    background-color: #a5a5a5b9;
+    background-color: #d0d0d0b9;
 }
 /*------------------GARANTIA-----------------*/
 .intro-garantia {
@@ -362,9 +340,9 @@ h4 {
         line-height: 2.3rem;
     }
 }
-
 .p-garantia {
     padding-top: 1rem;
+    padding-bottom: 2rem;
 
     & p {
         color: #25345b;
@@ -375,28 +353,43 @@ h4 {
     padding-top: 0.5rem;
     padding-left: 1rem;
     color: rgb(71, 71, 71);
+    text-align: justify;
 }
-
 .sub-title {
     color: #25345b;
 }
-
 /*--------------------FOOTER------------------*/
-.footer-top {
+.footer-top-white {
     font-size: 0.8rem;
-    padding-top: 7.2%;
-    padding-bottom: 1rem;
+    text-align: center;
+    padding-top: 8rem;
+    padding-bottom: 3rem;
     color: #000000;
     width: 100%;
+    background-color: $background-white;
 }   
-.footer-bottom {
-    color: rgb(112, 112, 112);
+.footer-bottom-white {
+    color: rgb(16, 16, 16);
     font-size: 0.5rem;
-    padding-top: 2%;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    background-color: #cdcdcd;
+    text-align: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    background-color: rgba(179, 179, 179, 0.692);
     width: 100%;
+}
+.footer-top-black {
+    @extend .footer-top-white;
+    color: #cacaca;
+    background-color: $background-black;
+}  
+.footer-bottom-black {
+    @extend .footer-bottom-white;
+    color: rgb(167, 167, 167);
+    background-color: #0000008a;
+}
+.footer-top-index {
+    @extend .footer-top-black;
+    background-color: transparent;
 }
 .red-social {
     padding-top: 1rem;
@@ -433,33 +426,20 @@ $padding-top-page-579: 4rem;
         padding: 0.3rem 0.4rem;
     }
     
-    /*--------------------(FOOTER)----------------*/
-    .footer-top {
-        font-size: 0.6rem;
-        padding-top: 3rem;
-      
-    }   
-    .footer-bottom {
-        font-size: 0.4rem;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-    }
- 
-    .footer-top-index {
+    /*--------------------(FOOTER)----------------*/  
+    .footer-top-white,.footer-top-black {
         font-size: 0.6rem;
         padding-top: 2rem;
         padding-bottom: 2rem;
-    }   
-    .footer-bottom-index {
+    } 
+    .footer-bottom-white, .footer-bottom-black {
         font-size: 0.4rem;
     }
-    
     /*--------------------(INDEX)------------------*/
     .title {
         font-size: 1.2rem;
     }
     .top-section {
-        padding-bottom: 8%;  
         padding-top: $padding-top-page-579 + 1;
     }
     #call {
@@ -580,11 +560,6 @@ $padding-top-page-579: 4rem;
         padding-top: 1rem;
         padding-bottom: 2rem;
     }
-    .footer-top-contacto {
-        font-size: 0.6rem;
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-    } 
     /*-----------------(NOSOTROS)-----------------*/
     .intro-nosotros {
         padding-top: $padding-top-page-579;
@@ -599,7 +574,8 @@ $padding-top-page-579: 4rem;
         }
     }
     .boxes-nosotros {
-        padding-top: 1rem;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
     }
     .box-unit-n {
         margin: 0.5rem;
