--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -134,7 +134,9 @@ h4 {
     font-size: 1.8rem;
     margin-bottom: 0%;
 }
-
+.link-number:hover {
+    text-decoration: none ;
+}
 .div-intro {
     background-color:#ddddddd1;
     height: fit-content;
